[gd_scene load_steps=6 format=3 uid="uid://cr2824nf5fpew"]

[ext_resource type="Script" uid="uid://bs2f1ike2rety" path="res://scenes/gameover.gd" id="1_2mkfd"]
[ext_resource type="Theme" uid="uid://cgah1efpjglvn" path="res://UI/Title screen.tres" id="2_h8i2o"]
[ext_resource type="AudioStream" uid="uid://y8iwirbb808u" path="res://sound/bgm/bgm_gamelose_fd1.ogg" id="3_2mkfd"]
[ext_resource type="Texture2D" uid="uid://w3jxm41tqsu" path="res://art/IMG_6867.png" id="3_h8i2o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mt7yr"]
texture = ExtResource("3_h8i2o")

[node name="gameover" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mkfd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1077.0
theme = ExtResource("2_h8i2o")
theme_override_styles/panel = SubResource("StyleBoxTexture_mt7yr")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 656.0
offset_top = 718.0
offset_right = 1257.0
offset_bottom = 855.0
theme = ExtResource("2_h8i2o")
theme_override_font_sizes/font_size = 128
text = "Crash Out!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 818.0
offset_top = 889.0
offset_right = 1124.0
offset_bottom = 1063.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_h8i2o")
theme_override_constants/separation = 20

[node name="retrybutton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_h8i2o")
theme_override_font_sizes/font_size = 64
text = "Retry"

[node name="Menubutton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_h8i2o")
theme_override_font_sizes/font_size = 64
text = "Menu"

[node name="LoseASP" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2mkfd")
volume_db = -33.425
autoplay = true

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/retrybutton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/retrybutton" to="." method="_on_retrybutton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Menubutton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menubutton" to="." method="_on_menubutton_pressed"]
